# machine-learning-algorithms

./: README.md  pyproject.toml
examples/: classification-example.ipynb  linear-regression-example.ipynb
machine-learning-algorithms/: linear_regression.py
mlagos/: __init__.py  kmeans.py  linear_regression.py  logistic_regression.py
notebooks/: 1-linear-regression.ipynb  decision-tree.ipynb  k-means.ipynb  k-nearest-neighbors.ipynb  linear-regression.ipynb  logistic-regression.ipynb  neural-network.ipynb
